Fixed submit button on IE11

--- a/art_showcase/static-assets/css/style.css
+++ b/art_showcase/static-assets/css/style.css
@@ -902,11 +902,19 @@ section .testimonial p {
  */
 
 .main_contactus_area button.loading, .main_contactus_area button.done {
-    visibility: hidden;
+    visibility: visible;
 }
 .main_contact_area button.hidden:after{
     visibility: visible;
 }
+
+.main_contactus_area button.loading {
+    color: #000;
+    background: #000;
+    border-color: #000;
+}
+
+
 .main_contactus_area button:after {
   visibility: hidden;
   font-family: FontAwesome;
@@ -930,9 +938,10 @@ section .testimonial p {
   visibility: visible;
   animation: loader 1s infinite linear;
 }
+
 /** Done **/
 .main_contactus_area button.done {
-  visibility: hidden;
+  visibility: visible;
 }
 .main_contactus_area button.done:before {
   visibility: visible;
@@ -963,7 +972,7 @@ section .testimonial p {
 }
 /** ERROR **/
 .main_contactus_area button.error {
-  visibility: hidden;
+  visibility: visible;
 }
 .main_contactus_area button.error:after{
   visibility: visible;
